fix(refgen): regenerate vectors deterministically
The vectors job failed on Linux: regenerating changed every image and eight
of the compressed Casio vectors. Both came from leaning on Node's zlib,
which is the same algorithm as the reference's but not the same bytes across
versions.

Use the reference's own pako, loaded from the submodule the way img2calc
loads it. It is pure JavaScript, so it gives identical output everywhere,
and it removes the approximation of substituting Node's zlib for it. No
committed vector changes, which confirms the two agreed here.

Store the source images uncompressed for the same reason: gzip carried
version-dependent bytes, and git packs them well enough on its own.